--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -227,7 +227,7 @@ jobs:
       - name: Actualizar servicios de ECS
         working-directory: Terraform
         run: |
-          CLUSTER_NAME=CLUSTER_NAME=$(terraform output -raw ecs_cluster_name 2>/dev/null || echo "")
+          CLUSTER_NAME=$(terraform output -raw ecs_cluster_name 2>/dev/null || echo "")
           SERVICE_NAME_API=$(terraform output -raw ecs_service_name_api 2>/dev/null || echo "")
           SERVICE_NAME_FRONTEND=$(terraform output -raw ecs_service_name_frontend 2>/dev/null || echo "")
 
