--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,14 +1,12 @@
-name: CI/CD Full Pipeline
+name: CI/CD Full Pipeline (Desarrollo)
 
 on:
   push:
     branches:
       - desarrollo
-      - main
   pull_request:
     branches:
       - desarrollo
-      - main
 
 env:
   AWS_REGION: us-east-1
@@ -98,9 +96,9 @@ jobs:
       - name: Configurar AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.DEV_AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Obtener archivo env.tfvars
@@ -141,9 +139,9 @@ jobs:
       - name: Configurar AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.DEV_AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
       - name: Login a ECR
@@ -193,9 +191,9 @@ jobs:
       - name: Configurar AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.DEV_AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Crear archivo env.tfvars
